# pr-checks-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEV.md  Dockerfile  README.md  SECURITY.md  architecture.puml  bandit-report-final.json  bandit-report-fixed.json  bandit-report.json  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
config/: logging.conf  prometheus-dev.yml  prometheus.yml  repos.json
docs/: LANGCHAIN_INTEGRATION.md
docs/diagrams/: README.md  workflow.puml
scripts/: backup.sh  health-check.sh  setup.sh
src/: __init__.py  main.py
src/graphs/: monitor_graph.py
src/nodes/: analyzer.py  escalation.py  invoker.py  monitor.py  scanner.py
src/services/: __init__.py  langchain_llm_service.py  llm_provider.py
src/state/: persistence.py  schemas.py
src/tools/: claude_tool.py  github_tool.py  langchain_claude_tool.py  telegram_tool.py
src/utils/: config.py  logging.py  monitoring.py
tests/: conftest.py  test_config.py  test_main.py
tests/integration/test_end_to_end/: conftest.py  test_error_handling.py  test_escalation.py  test_happy_path.py
tests/unit/test_nodes/: __init__.py  test_analyzer.py  test_escalation.py  test_invoker.py  test_monitor.py  test_scanner.py
tests/unit/test_services/: test_langchain_llm_service.py  test_llm_provider.py
tests/unit/test_state/: __init__.py  test_persistence.py  test_schemas.py
tests/unit/test_tools/: test_claude_tool.py  test_github_tool.py  test_langchain_claude_tool.py  test_telegram_tool.py
tests/unit/test_utils/: test_config.py  test_logging.py  test_monitoring.py
